--- a/src/drag.html
+++ b/src/drag.html
@@ -5,17 +5,17 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="css/demo.css">
 <link rel="stylesheet" href="../lib/SlickGrid/slick.grid.css"
-	type="text/css" media="screen" charset="utf-8" />
+	type="text/css" media="screen" />
 <link rel="stylesheet" href="../lib/SlickGrid/controls/slick.pager.css"
-	type="text/css" media="screen" charset="utf-8" />
+	type="text/css" media="screen" />
 <link rel="stylesheet"
 	href="../lib/SlickGrid/css/smoothness/jquery-ui-1.8.16.custom.css"
-	type="text/css" media="screen" charset="utf-8" />
+	type="text/css" media="screen" />
 <link rel="stylesheet" href="css/examples.css" type="text/css"
-	media="screen" charset="utf-8" />
+	media="screen" />
 <link rel="stylesheet"
 	href="../lib/SlickGrid/controls/slick.columnpicker.css" type="text/css"
-	media="screen" charset="utf-8" />
+	media="screen" />
 <script src="../lib/GoogleClosureLibrary/closure/goog/base.js"
 	type="text/javascript"></script>
 <script src="../lib/GoogleClosureLibrary/closure/goog/deps.js"
@@ -184,9 +184,15 @@
 
 		var limits = new goog.math.Rect(50, 50, 1000, 500);
 
-		var window1 = new goog.fx.Dragger($('win1'), goog.dom.query("#win1 label")[0], limits);
+		var window1 = new goog.fx.Dragger($('win1'), goog.dom.query("#win1 .bar")[0], limits);
 		var window2 = new goog.fx.Dragger($('win2'), goog.dom.query("#win2 .drag")[0], limits);
 		var window3 = new goog.fx.Dragger($('win3'), goog.dom.query("#win3 .bar")[0], limits);
+
+		dragBox = goog.dom.query("#win2")[0];
+		window2.defaultAction = function(x, y) {
+			dragBox.style.width = this.target.style.left + x + 'px';
+			dragBox.style.height = this.target.style.top + y + 'px';
+		};
 
 		window3.setHysteresis(6);
 
