--- a/src/drag.html
+++ b/src/drag.html
@@ -26,7 +26,11 @@
 		goog.require('goog.style');
 		goog.require('goog.dom.query');
 		goog.require('goog.window');
-	</script>
+		goog.require('goog.events');
+		goog.require('goog.events.EventType');
+		goog.require('goog.math.Size');
+		goog.require('goog.dom.ViewportSizeMonitor');
+</script>
 	<style type="text/css">
 		#frame {
 			position:         absolute;
@@ -226,6 +230,25 @@
 		resizer2.dispose();
 		dragger3.dispose();
 	});
+
+	var frame = $('frame');
+	frame.style.top = '20px';
+	frame.style.left = '20px';
+	function updateFrameSize(size) {
+		//goog.style.setSize(goog.dom.getElement('frame'), size);
+		frame.style.width = size.width - 40 + 'px';
+		frame.style.height = size.height - 30 + 'px';
+	}
+	updateFrameSize(goog.dom.getViewportSize());
+
+	// Start listening for viewport size changes.
+	var vsm = new goog.dom.ViewportSizeMonitor();
+	goog.events.listen(vsm, goog.events.EventType.RESIZE, function(e) {
+		size = vsm.getSize();
+		size.height -= 10;
+		updateFrameSize(size);
+	});
+
 </script>
 <script src="../lib/SlickGrid/lib/firebugx.js" type="text/javascript"></script>
 
