Big code reorg. SlickGrid now is more modular using goog.provide/require. Deps writer supports this GCT compiler supports this

--- a/src/drag.html
+++ b/src/drag.html
@@ -147,7 +147,7 @@
 		}
 	</style>
 </head>
-<body>
+<body style="background-image: url('../images/STS-125.jpg')">
 <div id="frame"></div>
 
 <div id="win1" class="window">
