--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,46 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Closure Test</title>
-		<!-- Uncompiled
-		<script type="text/javascript" src="../lib/closure/goog/base.js"></script>
-		<script type="text/javascript" src="js_uncompiled/deps.js"></script>
-		<script type="text/javascript" src="js_uncompiled/init.js"></script>
-		-->
-		<script type="text/javascript" src="js/example.js"></script>
-	</head>
-	<body>
-		<div id="main">
+		<title>Code Shelf</title>
+		<!--script type="text/javascript" src="js_uncompiled/deps.js"></script>
+			<script type="text/javascript" src="js_uncompiled/codeshelf.js"></script-->
+		<script src="../lib/GoogleClosureLibrary/closure/goog/base.js"
+				type="text/javascript"></script>
+		<script src="../lib/GoogleClosureLibrary/closure/goog/deps.js"
+				type="text/javascript"></script>
 		<script type="text/javascript">
-			closureexample.init( 'Test', document.getElementById('main') );
+			goog.require('goog.fx.Dragger');
+			goog.require('goog.dom');
+			goog.require('goog.style');
+			goog.require('goog.dom.query');
+			goog.require('goog.window');
+			goog.require('goog.events');
+			goog.require('goog.events.EventType');
+			goog.require('goog.math.Size');
+			goog.require('goog.dom.ViewportSizeMonitor');</script>
+	</head>
+	<body id='body' style="background: #000000">
+		<style type="text/css">
+			.bg {
+				width:    99.9%;
+				position: absolute;
+				top:      0;
+				left:     0;
+			}
+		</style>
+		<img class="bg" src="../images/STS-125.jpg" alt=""/>
+		<script type="text/javascript">
+
+			//	function updateWindowSize(size) {
+			//		goog.style.setSize(goog.dom.getElement('body'), size);
+			//	}
+			//	updateWindowSize(goog.dom.getViewportSize());
+			//
+			//	// Start listening for viewport size changes.
+			//	var vsm = new goog.dom.ViewportSizeMonitor();
+			//	goog.events.listen(vsm, goog.events.EventType.RESIZE, function (e) {
+			//		updateWindowSize(vsm.getSize());
+			//	});
 		</script>
 	</body>
 </html>
