--- a/src/drag2.html
+++ b/src/drag2.html
@@ -4,22 +4,13 @@
 	<title>goog.fx.Dragger</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/demo.css">
-	<link rel="stylesheet" href="../lib/SlickGrid/slick.grid.css"
-		  type="text/css" media="screen"/>
-	<link rel="stylesheet" href="../lib/SlickGrid/controls/slick.pager.css"
-		  type="text/css" media="screen"/>
-	<link rel="stylesheet"
-		  href="../lib/SlickGrid/css/smoothness/jquery-ui-1.8.16.custom.css"
-		  type="text/css" media="screen"/>
-	<link rel="stylesheet" href="css/examples.css" type="text/css"
-		  media="screen"/>
-	<link rel="stylesheet"
-		  href="../lib/SlickGrid/controls/slick.columnpicker.css" type="text/css"
-		  media="screen"/>
-	<script src="../lib/GoogleClosureLibrary/closure/goog/base.js"
-			type="text/javascript"></script>
-	<script src="./js_uncompiled/deps.js"
-			type="text/javascript"></script>
+	<link rel="stylesheet" href="../lib/SlickGrid/slick.grid.css" type="text/css" media="screen"/>
+	<link rel="stylesheet" href="../lib/SlickGrid/controls/slick.pager.css" type="text/css" media="screen"/>
+	<link rel="stylesheet" href="../lib/SlickGrid/css/smoothness/jquery-ui-1.8.16.custom.css" type="text/css" media="screen"/>
+	<link rel="stylesheet" href="css/examples.css" type="text/css" media="screen"/>
+	<link rel="stylesheet" href="../lib/SlickGrid/controls/slick.columnpicker.css" type="text/css" media="screen"/>
+	<script src="../lib/GoogleClosureLibrary/closure/goog/base.js" type="text/javascript"></script>
+	<script src="./js_uncompiled/deps.js" type="text/javascript"></script>
 	<script type="text/javascript">
 		goog.require('goog.fx.Dragger');
 		goog.require('goog.dom');
