Get rolling on launch page.

--- a/src/drag3.html
+++ b/src/drag3.html
@@ -17,12 +17,12 @@
 			</div>
 			<div id="win1" class="window">
 				<div class="bar">
-					<label>1. Drag Me...</label>
+					<label>Window 1</label>
 				</div>
 			</div>
 			<div id="win2" class="window" style="width: 600px; height: 220px">
 				<div class="bar" style="width: 100%">
-					<label>2. Drag Me...</label>
+					<label>Listview 2</label>
 					<!--div class="drag">
 									   </div-->
 				</div>
@@ -39,7 +39,7 @@
 			</div>
 			<div id="win3" class="window">
 				<div class="bar">
-					<label>3. Drag Me...</label>
+					<label>Window 3</label>
 				</div>
 			</div>
 		</div>
