More launch code stuff

--- a/src/drag3.html
+++ b/src/drag3.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<div id="frame">
-			<div id="codeshelflogo">
+			<div id="codeshelflogo" class="rotate">
 				<h1>codeshelf</h1>
 			</div>
 			<div id="win1" class="window">
