WebSocket support starting!

--- a/src/codeshelf.html
+++ b/src/codeshelf.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="../lib/GoogleClosureLibrary/closure/goog/css/roundedpanel.css">
 		<script type="text/javascript" src="../lib/GoogleClosureLibrary/closure/goog/base.js"></script>
 		<script type="text/javascript" src="js_uncompiled/deps.js"></script>
+		<!-- script type="text/javascript" src="../lib/GoogleClosureTemplates/soyutils.js"></script-->
 	</head>
 	<body id="body" style="background: #000000">
 		<script type="text/javascript">
