WebSession command handling experiments (and first function)

--- a/src/codeshelf.html
+++ b/src/codeshelf.html
@@ -10,8 +10,8 @@
 	</head>
 	<body id="body" style="background: #000000">
 		<script type="text/javascript">
-			goog.require('codeshelf.launch');
+			goog.require('codeshelf.application');
 		</script>
-		<!--script type="text/javascript" src="../src/js_uncompiled/launch.js"></script-->
+		<!--script type="text/javascript" src="../src/js_uncompiled/application.js"></script-->
 	</body>
 </html>
