WebSession command handling experiments (and first function)

--- a/src/codeshelf.html
+++ b/src/codeshelf.html
@@ -2,13 +2,18 @@
 <html>
 	<head>
 		<title>Code Shelf</title>
+		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/codeshelf_generated.css" type="text/css" media="screen"/>
 		<link rel="stylesheet" href="../lib/GoogleClosureLibrary/closure/goog/css/roundedpanel.css">
+		<link rel="stylesheet" href="../lib/SlickGrid/slick.grid.css" type="text/css" media="screen"/>
+		<link rel="stylesheet" href="../lib/SlickGrid/controls/slick.pager.css" type="text/css" media="screen"/>
+		<link rel="stylesheet" href="../lib/SlickGrid/css/smoothness/jquery-ui-1.8.16.custom.css" type="text/css" media="screen"/>
+		<link rel="stylesheet" href="../lib/SlickGrid/controls/slick.columnpicker.css" type="text/css" media="screen"/>
 		<script type="text/javascript" src="../lib/GoogleClosureLibrary/closure/goog/base.js"></script>
 		<script type="text/javascript" src="js_uncompiled/deps.js"></script>
 		<!-- script type="text/javascript" src="../lib/GoogleClosureTemplates/soyutils.js"></script-->
 	</head>
-	<body id="body" style="background: #000000">
+	<body id="body" class="launch_body">
 		<script type="text/javascript">
 			goog.require('codeshelf.application');
 		</script>
