--- a/src/codeshelf.html
+++ b/src/codeshelf.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="../lib/SlickGrid/controls/slick.columnpicker.css" type="text/css" media="screen"/>
 		<script type="text/javascript" src="../lib/GoogleClosureLibrary/closure/goog/base.js"></script>
 		<script type="text/javascript" src="js_uncompiled/deps.js"></script>
-		<!-- script type="text/javascript" src="../lib/GoogleClosureTemplates/soyutils.js"></script-->
+		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 	</head>
 	<body id="body" class="launch_body">
 		<script type="text/javascript">
