--- a/src/html/codeshelf.dev.html
+++ b/src/html/codeshelf.dev.html
@@ -4,6 +4,10 @@
 		<title>Code Shelf</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/roundedpanel.css">
+		<link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/menu.css">
+		<link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/menuitem.css">
+		<link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/menuseparator.css">
+		<link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/toolbar.css">
 		<link rel="stylesheet" href="../../lib/SlickGrid/slick.grid.css" type="text/css" media="screen"/>
 		<link rel="stylesheet" href="../../lib/SlickGrid/controls/slick.pager.css" type="text/css" media="screen"/>
 		<link rel="stylesheet" href="../../lib/SlickGrid/css/smoothness/jquery-ui-1.8.16.custom.css"
