More work area editor work. (Try to make dialogs work right.)

--- a/src/html/codeshelf.html
+++ b/src/html/codeshelf.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/roundedpanel.css">
 		<link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/menu.css">
 		<link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/menuitem.css">
+		<link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/checkbox.css">
 		<link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/menuseparator.css">
 		<link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/toolbar.css">
 		<link rel="stylesheet" href="../../lib/SlickGrid/slick.grid.css" type="text/css" media="screen"/>
