--- a/src/html/codeshelf.dev.html
+++ b/src/html/codeshelf.dev.html
@@ -7,6 +7,8 @@
 		<link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/menu.css">
 		<link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/menuitem.css">
 		<link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/menuseparator.css">
+		<link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/checkbox.css">
+		<link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/dialog.css">
 		<link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/toolbar.css">
 		<link rel="stylesheet" href="../../lib/SlickGrid/slick.grid.css" type="text/css" media="screen"/>
 		<link rel="stylesheet" href="../../lib/SlickGrid/controls/slick.pager.css" type="text/css" media="screen"/>
