Support Google's new source mapping debug system.

--- a/src/html/codeshelf.html
+++ b/src/html/codeshelf.html
@@ -23,7 +23,7 @@
 		<script type="text/javascript" src="../js_compiled/deps.js"></script>
 	</head>
 	<body id="body" class="launch_body">
-		<script type="text/javascript" src="../../src/js_compiled/codeshelf.js"></script>
+		<script type="text/javascript" src="../js_compiled/codeshelf.js"></script>
 	<!--script type="text/javascript">
 		   goog.require('codeshelf.application');
 	   </script-->
