Switch to login (instead of launch codes).

--- a/src/html/codeshelf.dev.html
+++ b/src/html/codeshelf.dev.html
@@ -24,7 +24,7 @@
 		<script type="text/javascript" src="../../lib/GoogleClosureLibrary/closure/goog/base.js"></script>
 		<script type="text/javascript" src="../js_compiled/deps.js"></script>
 	</head>
-	<body id="body" class="launch_body">
+	<body id="body" class="login_body">
 		<!--script type="text/javascript" src="../js_uncompiled/application.js"></script-->
 		<script type="text/javascript">
 			   goog.require('codeshelf.application');
