--- a/src/html/codeshelf.html
+++ b/src/html/codeshelf.html
@@ -23,7 +23,7 @@
 		<script type="text/javascript" src="../../lib/GoogleClosureLibrary/closure/goog/base.js"></script>
 		<script type="text/javascript" src="../js_compiled/deps.js"></script>
 	</head>
-	<body id="body" class="launch_body">
+	<body id="body" class="login_body">
 		<script type="text/javascript" src="../js_compiled/codeshelf.js"></script>
 	<!--script type="text/javascript">
 		   goog.require('codeshelf.application');
