--- a/src/html/codeshelf.dev.html
+++ b/src/html/codeshelf.dev.html
@@ -16,7 +16,7 @@
 		<link rel="stylesheet" href="../../lib/SlickGrid/css/smoothness/jquery-ui-1.8.16.custom.css"
 		      type="text/css" media="screen"/>
 		<link rel="stylesheet" href="../../lib/SlickGrid/controls/slick.columnpicker.css" type="text/css" media="screen"/>
-		<link rel="stylesheet" href="../css/codeshelf_generated.css" type="text/css" media="screen"/>
+		<link rel="stylesheet" href="../css/codeshelf.css" type="text/css" media="screen"/>
 		<link rel="stylesheet" href="../css/listview.css" type="text/css" media="screen"/>
 		<link rel="stylesheet" href="../css/slick-default-theme.css" type="text/css" media="screen"/>
 		<!--script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script-->
