Setup improvements ahead of first Rackspace deployment.

--- a/src/html/codeshelf.dev.html
+++ b/src/html/codeshelf.dev.html
@@ -3,14 +3,14 @@
 	<head>
 		<title>Code Shelf</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/roundedpanel.css">
-		<link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/menu.css">
-		<link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/menuitem.css">
-		<link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/menuseparator.css">
-		<link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/checkbox.css">
-		<link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/dialog.css">
-        <link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/toolbar.css">
-        <link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/tree.css">
+		<link rel="stylesheet" href="../css/roundedpanel.css">
+		<link rel="stylesheet" href="../css/menu.css">
+		<link rel="stylesheet" href="../css/menuitem.css">
+		<link rel="stylesheet" href="../css/menuseparator.css">
+		<link rel="stylesheet" href="../css/checkbox.css">
+		<link rel="stylesheet" href="../css/dialog.css">
+        <link rel="stylesheet" href="../css/toolbar.css">
+        <link rel="stylesheet" href="../css/tree.css">
 		<link rel="stylesheet" href="../../lib/SlickGrid/slick.grid.css" type="text/css" media="screen"/>
 		<link rel="stylesheet" href="../../lib/SlickGrid/controls/slick.pager.css" type="text/css" media="screen"/>
 		<link rel="stylesheet" href="../../lib/SlickGrid/css/smoothness/jquery-ui-1.8.16.custom.css"
@@ -20,7 +20,7 @@
 		<link rel="stylesheet" href="../css/listview.css" type="text/css" media="screen"/>
 		<link rel="stylesheet" href="../css/slick-default-theme.css" type="text/css" media="screen"/>
 		<!--script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script-->
-		<script type="text/javascript" src="http://www.google.com/jsapi"></script>
+		<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 		<script type="text/javascript" src="../../lib/GoogleClosureLibrary/closure/goog/base.js"></script>
 		<script type="text/javascript" src="../js_compiled/deps.js"></script>
 	</head>
