--- a/src/html/codeshelf.html
+++ b/src/html/codeshelf.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Code Shelf</title>
-		<meta charset="utf-8">
-		<link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/roundedpanel.css">
-		<link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/menu.css">
-		<link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/menuitem.css">
-		<link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/checkbox.css">
-		<link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/menuseparator.css">
-        <link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/tree.css">
-        <link rel="stylesheet" href="../../lib/GoogleClosureLibrary/closure/goog/css/toolbar.css">
-		<link rel="stylesheet" href="../../lib/SlickGrid/slick.grid.css" type="text/css" media="screen"/>
-		<link rel="stylesheet" href="../../lib/SlickGrid/controls/slick.pager.css" type="text/css" media="screen"/>
-		<link rel="stylesheet" href="../../lib/SlickGrid/css/smoothness/jquery-ui-1.8.16.custom.css"
-		      type="text/css" media="screen"/>
-		<link rel="stylesheet" href="../../lib/SlickGrid/controls/slick.columnpicker.css" type="text/css" media="screen"/>
-		<link rel="stylesheet" href="./css/codeshelf.css" type="text/css" media="screen"/>
-		<link rel="stylesheet" href="./css/listview.css" type="text/css" media="screen"/>
-		<link rel="stylesheet" href="./css/slick-default-theme.css" type="text/css" media="screen"/>
-		<!--script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script-->
-		<script type="text/javascript" src="http://www.google.com/jsapi"></script>
-	</head>
-	<body id="body" class="login_body">
-		<script type="text/javascript" src="./js/codeshelf.js"></script>
-	</body>
+<head>
+	<title>Code Shelf</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="./css/roundedpanel.css">
+	<link rel="stylesheet" href="./css/menu.css">
+	<link rel="stylesheet" href="./css/menuitem.css">
+	<link rel="stylesheet" href="./css/checkbox.css">
+	<link rel="stylesheet" href="./css/menuseparator.css">
+	<link rel="stylesheet" href="./css/tree.css">
+	<link rel="stylesheet" href="./css/toolbar.css">
+	<link rel="stylesheet" href="./css/slick.grid.css" type="text/css" media="screen"/>
+	<link rel="stylesheet" href="./css/slick.pager.css" type="text/css" media="screen"/>
+	<link rel="stylesheet" href="./css/slick.columnpicker.css" type="text/css" media="screen"/>
+	<link rel="stylesheet" href="./css/jquery-ui-1.8.16.custom.css" type="text/css" media="screen"/>
+	<link rel="stylesheet" href="./css/codeshelf.css" type="text/css" media="screen"/>
+	<link rel="stylesheet" href="./css/listview.css" type="text/css" media="screen"/>
+	<link rel="stylesheet" href="./css/slick-default-theme.css" type="text/css" media="screen"/>
+	<!--script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script-->
+	<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+</head>
+<body id="body" class="login_body">
+<script type="text/javascript" src="./js/codeshelf.js"></script>
+</body>
 </html>
