--- a/src/html/codeshelf.dev.html
+++ b/src/html/codeshelf.dev.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Code Shelf</title>
+		<title>Codeshelf</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="../css/roundedpanel.css">
 		<link rel="stylesheet" href="../css/menu.css">
@@ -22,7 +22,7 @@
 		<!--script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script-->
 		<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 		<script type="text/javascript" src="../../lib/GoogleClosureLibrary/closure/goog/base.js"></script>
-		<script type="text/javascript" src="../js_compiled/deps.js"></script>
+		<script type="text/javascript" src="../js_uncompiled/deps.js"></script>
 	</head>
 	<body id="body" class="login_body">
 		<!--script type="text/javascript" src="../js_uncompiled/application.js"></script-->
