--- a/src/html/codeshelf.html
+++ b/src/html/codeshelf.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Code Shelf</title>
+	<title>Codeshelf</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="./css/roundedpanel.css">
 	<link rel="stylesheet" href="./css/menu.css">
