--- a/src/html/codeshelf.dev.html
+++ b/src/html/codeshelf.dev.html
@@ -23,6 +23,7 @@
 		<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 		<script type="text/javascript" src="../../lib/GoogleClosureLibrary/closure/goog/base.js"></script>
 		<script type="text/javascript" src="../js_uncompiled/deps.js"></script>
+		<link rel="icon" href="./favicon.gif" />
 	</head>
 	<body id="body" class="login_body">
 		<!--script type="text/javascript" src="../js_uncompiled/application.js"></script-->
