--- a/src/html/codeshelf.html
+++ b/src/html/codeshelf.html
@@ -19,6 +19,7 @@
 	<link rel="stylesheet" href="./css/slick-default-theme.css" type="text/css" media="screen"/>
 	<!--script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script-->
 	<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+	<link rel="icon" href="./favicon.gif" />
 </head>
 <body id="body" class="login_body">
 <script type="text/javascript" src="./js/codeshelf.js"></script>
