--- a/src/html/angular-test.html
+++ b/src/html/angular-test.html
@@ -3,6 +3,7 @@
 <head>
   <script src="../../lib/AngularJS/angular.min.js" ></script>
   <script src="../js_uncompiled/angular-test.js" ></script>
+    <script type="application/javascript" src="../../lib/AngularJSModalService/createDialog.js" ></script>
     <style type="text/css">
       .css-form input.ng-invalid.ng-dirty {
         background-color: #FA787E;
@@ -40,6 +41,7 @@
         <button ng-click="reset()" ng-disabled="isUnchanged(user)">RESET</button>
         <button ng-click="update(user)"
                 ng-disabled="form.$invalid || isUnchanged(user)">SAVE</button>
+          <button ng-click="launchSimpleModal()" class="btn btn-large btn-danger">Simple Modal</button>
       </form>
     <pre>form = {{user | json}}</pre>
     <pre>master = {{master | json}}</pre>
