--- a/src/html/codeshelf.dev.html
+++ b/src/html/codeshelf.dev.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="codeshelfApp">
 	<head>
 		<title>Codeshelf</title>
 		<meta charset="utf-8">
@@ -22,10 +22,16 @@
 		<!--script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script-->
 		<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 		<script type="text/javascript" src="../../lib/GoogleClosureLibrary/closure/goog/base.js"></script>
-		<script type="text/javascript" src="../js_uncompiled/deps.js"></script>
-		<link rel="icon" href="./favicon.gif" />
+
+        <script src="../../lib/AngularJS/angular.min.js" ></script>
+        <script src="../../lib/UIBootstrap/ui-bootstrap-tpls-0.7.0.js"></script>
+        <link href="../../lib/TwitterBootstrap/bootstrap-combined.min.css" rel="stylesheet">
+
+        <script type="text/javascript" src="../js_uncompiled/deps.js"></script>
+
+        <link rel="icon" href="./favicon.gif" />
 	</head>
-	<body id="body" class="login_body">
+	<body id="body" class="login_body" ng-controller="WorkAreaCtrl">
 		<!--script type="text/javascript" src="../js_uncompiled/application.js"></script-->
 		<script type="text/javascript">
 			   goog.require('codeshelf.application');
@@ -42,5 +48,32 @@
 
 		</script>
 
+        <script type="text/ng-template" id="createAisleModalContent.html">
+            <div class="modal-header">
+                <h3>I'm a modal!</h3>
+            </div>
+            <div class="modal-body">
+                <div id='instructions'>
+                    Describe the bays on this aisle.  (You can adjust the oddballs later.)
+                </div>
+                <br>
+                <div class='dialogFields modal-dialog-content'>
+                    <table>
+                        <tr><td>Aisle ID: </td><td><input id='aisleId' class='aisleId' label='' autofocus ng-model="aisle.aisleId"/></td></tr>
+                        <tr><td>Bay Height: </td><td><input id='bayHeight' class='bayHeight' label='Feet' ng-model="aisle.bayHeight"/></td></tr>
+                        <tr><td>Bay Width: </td><td><input id='bayWidth' class='bayWidth' label='Feet' ng-model="aisle.bayWidth"/></td></tr>
+                        <tr><td>Bay Depth: </td><td><input id='bayDepth' class='bayDepth' label='Feet' ng-model="aisle.bayDepth"/></td></tr>
+                        <tr><td>Bays High: </td><td><input id='baysHigh' class='baysHigh' label='Num' ng-model="aisle.baysHigh"/></td></tr>
+                        <tr><td>Bays Long: </td><td><input id='baysLong' class='baysLong' label='Num' ng-model="aisle.baysLong"/></td></tr>
+                    </table>
+                    <br>
+                    <div>Opens Top or Left: <span id="opensLowSide" class="opensLowSide goog-checkbox goog-checkbox-checked"></span></div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-primary" ng-click="ok()">OK</button>
+                <button class="btn btn-warning" ng-click="cancel()">Cancela</button>
+            </div>
+        </script>
 	</body>
 </html>
