--- a/src/html/codeshelf.dev.html
+++ b/src/html/codeshelf.dev.html
@@ -24,6 +24,7 @@
 		<script type="text/javascript" src="../../lib/GoogleClosureLibrary/closure/goog/base.js"></script>
 
         <script src="../../lib/AngularJS/angular.min.js" ></script>
+        <script src="../../lib/AngularJS/angular-route.min.js"></script>
         <script src="../../lib/UIBootstrap/ui-bootstrap-tpls-0.7.0.js"></script>
         <link href="../../lib/TwitterBootstrap/bootstrap-combined.min.css" rel="stylesheet">
 
@@ -32,11 +33,12 @@
         <link rel="icon" href="./favicon.gif" />
 	</head>
 	<body id="body" class="login_body" ng-controller="WorkAreaCtrl">
-		<!--script type="text/javascript" src="../js_uncompiled/application.js"></script-->
 		<script type="text/javascript">
 			   goog.require('codeshelf.application');
 		</script>
+        <script type="text/javascript" src="../js_uncompiled/codeshelf.controllers.js"></script>
 
+        <div ng-view></div>
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -50,7 +52,7 @@
 
         <script type="text/ng-template" id="createAisleModalContent.html">
             <div class="modal-header">
-                <h3>I'm a modal!</h3>
+                <h3>Create Aisle</h3>
             </div>
             <div class="modal-body">
                 <div id='instructions'>
@@ -59,12 +61,12 @@
                 <br>
                 <div class='dialogFields modal-dialog-content'>
                     <table>
-                        <tr><td>Aisle ID: </td><td><input id='aisleId' class='aisleId' label='' autofocus ng-model="aisle.aisleId"/></td></tr>
-                        <tr><td>Bay Height: </td><td><input id='bayHeight' class='bayHeight' label='Feet' ng-model="aisle.bayHeight"/></td></tr>
-                        <tr><td>Bay Width: </td><td><input id='bayWidth' class='bayWidth' label='Feet' ng-model="aisle.bayWidth"/></td></tr>
-                        <tr><td>Bay Depth: </td><td><input id='bayDepth' class='bayDepth' label='Feet' ng-model="aisle.bayDepth"/></td></tr>
-                        <tr><td>Bays High: </td><td><input id='baysHigh' class='baysHigh' label='Num' ng-model="aisle.baysHigh"/></td></tr>
-                        <tr><td>Bays Long: </td><td><input id='baysLong' class='baysLong' label='Num' ng-model="aisle.baysLong"/></td></tr>
+                        <tr><td>Aisle ID: </td><td><input id='aisleId' class='aisleId' label='' autofocus ng-model="aisleForm.aisleId"/></td></tr>
+                        <tr><td>Bay Height: </td><td><input id='bayHeight' class='bayHeight' label='Feet' placeholder="Feet" ng-model="aisleForm.bayHeight"/></td></tr>
+                        <tr><td>Bay Width: </td><td><input id='bayWidth' class='bayWidth' label='Feet' placeholder="Feet" ng-model="aisleForm.bayWidth"/></td></tr>
+                        <tr><td>Bay Depth: </td><td><input id='bayDepth' class='bayDepth' label='Feet' placeholder="Feet" ng-model="aisleForm.bayDepth"/></td></tr>
+                        <tr><td>Bays High: </td><td><input id='baysHigh' class='baysHigh' label='Num' placeholder="Num" ng-model="aisleForm.baysHigh"/></td></tr>
+                        <tr><td>Bays Long: </td><td><input id='baysLong' class='baysLong' label='Num' placeholder="Num" ng-model="aisleForm.baysLong"/></td></tr>
                     </table>
                     <br>
                     <div>Opens Top or Left: <span id="opensLowSide" class="opensLowSide goog-checkbox goog-checkbox-checked"></span></div>
@@ -72,7 +74,7 @@
             </div>
             <div class="modal-footer">
                 <button class="btn btn-primary" ng-click="ok()">OK</button>
-                <button class="btn btn-warning" ng-click="cancel()">Cancela</button>
+                <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
             </div>
         </script>
 	</body>
