--- a/src/html/codeshelf.dev.html
+++ b/src/html/codeshelf.dev.html
@@ -9,8 +9,8 @@
 		<link rel="stylesheet" href="../css/menuseparator.css">
 		<link rel="stylesheet" href="../css/checkbox.css">
 		<link rel="stylesheet" href="../css/dialog.css">
-        <link rel="stylesheet" href="../css/toolbar.css">
-        <link rel="stylesheet" href="../css/tree.css">
+		<link rel="stylesheet" href="../css/toolbar.css">
+		<link rel="stylesheet" href="../css/tree.css">
 		<link rel="stylesheet" href="../../lib/SlickGrid/slick.grid.css" type="text/css" media="screen"/>
 		<link rel="stylesheet" href="../../lib/SlickGrid/controls/slick.pager.css" type="text/css" media="screen"/>
 		<link rel="stylesheet" href="../../lib/SlickGrid/css/smoothness/jquery-ui-1.8.16.custom.css"
@@ -23,22 +23,21 @@
 		<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 		<script type="text/javascript" src="../../lib/GoogleClosureLibrary/closure/goog/base.js"></script>
 
-        <script src="../../lib/AngularJS/angular.min.js" ></script>
-        <script src="../../lib/AngularJS/angular-route.min.js"></script>
-        <script src="../../lib/UIBootstrap/ui-bootstrap-tpls-0.7.0.js"></script>
-        <link href="../../lib/TwitterBootstrap/bootstrap-combined.min.css" rel="stylesheet">
+		<script src="../../lib/AngularJS/angular.js" ></script>
+		<script src="../../lib/AngularJS/angular-route.js"></script>
+		<script src="../../lib/UIBootstrap/ui-bootstrap-tpls-0.7.0.js"></script>
+		<link href="../../lib/TwitterBootstrap/bootstrap-combined.min.css" rel="stylesheet">
 
-        <script type="text/javascript" src="../js_uncompiled/deps.js"></script>
+		<script type="text/javascript" src="../js_uncompiled/deps.js"></script>
 
-        <link rel="icon" href="./favicon.gif" />
+		<link rel="icon" href="./favicon.gif" />
 	</head>
 	<body id="body" class="login_body" ng-controller="WorkAreaCtrl">
-		<script type="text/javascript">
-			   goog.require('codeshelf.application');
-		</script>
-        <script type="text/javascript" src="../js_uncompiled/codeshelf.controllers.js"></script>
-
-        <div ng-view></div>
+	<script type="text/javascript">
+		goog.require('codeshelf.application');
+	</script>
+	<script type="text/javascript" src="../js_uncompiled/codeshelf.controllers.js"></script>
+	<div ng-view></div>
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -50,32 +49,33 @@
 
 		</script>
 
-        <script type="text/ng-template" id="createAisleModalContent.html">
-            <div class="modal-header">
-                <h3>Create Aisle</h3>
-            </div>
-            <div class="modal-body">
-                <div id='instructions'>
-                    Describe the bays on this aisle.  (You can adjust the oddballs later.)
-                </div>
-                <br>
-                <div class='dialogFields modal-dialog-content'>
-                    <table>
-                        <tr><td>Aisle ID: </td><td><input id='aisleId' class='aisleId' label='' autofocus ng-model="aisleForm.aisleId"/></td></tr>
-                        <tr><td>Bay Height: </td><td><input id='bayHeight' class='bayHeight' label='Feet' placeholder="Feet" ng-model="aisleForm.bayHeight"/></td></tr>
-                        <tr><td>Bay Width: </td><td><input id='bayWidth' class='bayWidth' label='Feet' placeholder="Feet" ng-model="aisleForm.bayWidth"/></td></tr>
-                        <tr><td>Bay Depth: </td><td><input id='bayDepth' class='bayDepth' label='Feet' placeholder="Feet" ng-model="aisleForm.bayDepth"/></td></tr>
-                        <tr><td>Bays High: </td><td><input id='baysHigh' class='baysHigh' label='Num' placeholder="Num" ng-model="aisleForm.baysHigh"/></td></tr>
-                        <tr><td>Bays Long: </td><td><input id='baysLong' class='baysLong' label='Num' placeholder="Num" ng-model="aisleForm.baysLong"/></td></tr>
-                    </table>
-                    <br>
-                    <div>Opens Top or Left: <span id="opensLowSide" class="opensLowSide goog-checkbox goog-checkbox-checked"></span></div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-primary" ng-click="ok()">OK</button>
-                <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
-            </div>
-        </script>
+		<script type="text/ng-template" id="createAisleModalContent.html">
+			<div class="modal-header">
+				<h3>Create Aisle</h3>
+			</div>
+			<div class="modal-body">
+			  <div class="alert alert-danger" ng-repeat="msg in aisleForm.messages">{{msg}}</div>
+				<div id='instructions'>
+					Describe the bays on this aisle.  (You can adjust the oddballs later.)
+				</div>
+				<br>
+				<div class='dialogFields modal-dialog-content'>
+					<table>
+						<tr><td>Aisle ID: </td><td><input id='aisleId' class='aisleId' label='' autofocus ng-model="aisleForm.aisleId"/></td></tr>
+						<tr><td>Bay Height: </td><td><input id='bayHeight' class='bayHeight' label='Feet' placeholder="Feet" ng-model="aisleForm.bayHeight"/></td></tr>
+						<tr><td>Bay Width: </td><td><input id='bayWidth' class='bayWidth' label='Feet' placeholder="Feet" ng-model="aisleForm.bayWidth"/></td></tr>
+						<tr><td>Bay Depth: </td><td><input id='bayDepth' class='bayDepth' label='Feet' placeholder="Feet" ng-model="aisleForm.bayDepth"/></td></tr>
+						<tr><td>Bays High: </td><td><input id='baysHigh' class='baysHigh' label='Num' placeholder="Num" ng-model="aisleForm.baysHigh"/></td></tr>
+						<tr><td>Bays Long: </td><td><input id='baysLong' class='baysLong' label='Num' placeholder="Num" ng-model="aisleForm.baysLong"/></td></tr>
+					</table>
+					<br>
+					<div>Opens Top or Left: <input id="opensLowSide" type="checkbox" class="opensLowSide" ng-model="aisleForm.opensLowSide" value="true"  ng-true-value="true" ng-false-value="false"></div>
+				</div>
+			</div>
+			<div class="modal-footer">
+				<button class="btn btn-primary" ng-click="ok()">OK</button>
+				<button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+			</div>
+		</script>
 	</body>
 </html>
