--- a/src/html/codeshelf.html
+++ b/src/html/codeshelf.html
@@ -22,6 +22,11 @@
 	<link rel="icon" href="./favicon.gif" />
 </head>
 <body id="body" class="login_body">
+
+<script src="../../lib/AngularJS/angular.min.js" ></script>
+<script src="../../lib/AngularJS/angular-route.min.js"></script>
+<script src="../../lib/UIBootstrap/ui-bootstrap-tpls-0.7.0.js"></script>
+
 <script type="text/javascript" src="./js/codeshelf.js"></script>
 
 <script>
