--- a/src/html/codeshelf.dev.html
+++ b/src/html/codeshelf.dev.html
@@ -3,8 +3,7 @@
 	<head>
 		<title>Codeshelf</title>
 		<meta charset="utf-8">
-        <link href="../../lib/TwitterBootstrap/bootstrap-combined.min.css" rel="stylesheet">
-
+        <link rel="stylesheet" href="../../lib/TwitterBootstrap/bootstrap-combined.min.css">
 		<link rel="stylesheet" href="../css/roundedpanel.css">
 		<link rel="stylesheet" href="../css/menu.css">
 		<link rel="stylesheet" href="../css/menuitem.css">
@@ -25,8 +24,9 @@
 		<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 		<script type="text/javascript" src="../../lib/GoogleClosureLibrary/closure/goog/base.js"></script>
 
-        <script src="../../lib/AngularJS/angular.min.js" ></script>
-        <script src="../../lib/AngularJS/angular-route.min.js"></script>
+        <script src="../../lib/AngularJS/angular.js" ></script>
+        <script src="../../lib/AngularJS/i18n/angular-locale_en-us.js"></script>
+        <script src="../../lib/AngularJS/angular-route.js"></script>
         <script src="../../lib/UIBootstrap/ui-bootstrap-tpls-0.7.0.js"></script>
 
 		<script type="text/javascript" src="../js_uncompiled/deps.js"></script>
@@ -34,11 +34,14 @@
 		<link rel="icon" href="./favicon.gif" />
 	</head>
 	<body id="body" class="login_body" ng-controller="WorkAreaCtrl">
-	<script type="text/javascript">
-		goog.require('codeshelf.application');
-	</script>
-	<script type="text/javascript" src="../js_uncompiled/codeshelf.controllers.js"></script>
-	<div ng-view></div>
+
+		<script type="text/javascript">
+			goog.require('codeshelf.application');
+			goog.require('codeshelf.controllers');
+		</script>
+		
+		<!--script type="text/javascript" src="../js_uncompiled/codeshelf.controllers.js"></script-->
+		<div ng-view></div>
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
