--- a/src/html/codeshelf.html
+++ b/src/html/codeshelf.html
@@ -73,6 +73,7 @@
 						</table>
 						<br>
 						<div>Opens Top or Left: <input id="opensLowSide" type="checkbox" class="opensLowSide" ng-model="aisleForm.opensLowSide" value="true"  ng-true-value="true" ng-false-value="false"></div>
+						<div>Left Hand Bay: <input id="isLeftHandBay" type="checkbox" class="isLeftHandBay" ng-model="aisleForm.isLeftHandBay" value="true"  ng-true-value="true" ng-false-value="false"></div>
 					</div>
 				</div>
 				<div class="modal-footer">
