* Support Point in the i/f to the backend. * Get rid of "opens top/left" * Fix ghost path creation problem (masked anyway) * Expose organization name in login.

--- a/src/html/codeshelf.html
+++ b/src/html/codeshelf.html
@@ -70,9 +70,9 @@
 							<tr><td>Bay Depth: </td><td><input id='bayDepth' class='bayDepth' label='Feet' placeholder="Feet" ng-model="aisleForm.bayDepth"/></td></tr>
 							<tr><td>Bays High: </td><td><input id='baysHigh' class='baysHigh' label='Num' placeholder="Num" ng-model="aisleForm.baysHigh"/></td></tr>
 							<tr><td>Bays Long: </td><td><input id='baysLong' class='baysLong' label='Num' placeholder="Num" ng-model="aisleForm.baysLong"/></td></tr>
+                            <tr><td>Controller ID: </td><td><input id='controllerId' class='controllerId' label='ID' placeholder="ID" ng-model="aisleForm.controllerId"/></td></tr>
 						</table>
 						<br>
-						<div>Opens Top or Left: <input id="opensLowSide" type="checkbox" class="opensLowSide" ng-model="aisleForm.opensLowSide" value="true"  ng-true-value="true" ng-false-value="false"></div>
 						<div>Left Hand Bay: <input id="isLeftHandBay" type="checkbox" class="isLeftHandBay" ng-model="aisleForm.isLeftHandBay" value="true"  ng-true-value="true" ng-false-value="false"></div>
 					</div>
 				</div>
