--- a/src/html/codeshelf.html
+++ b/src/html/codeshelf.html
@@ -52,7 +52,8 @@
 
 		</script>
 
-		<script type="text/ng-template" id="createAisleModalContent.html">
+        <!--JR  Moved this into partials/aisle-editor.html  Delete this section altogether-->
+		<script type="text/ng-template" id="XX_createAisleModalContent.html">
 				<div class="modal-header">
 					<h3>Create Aisle</h3>
 				</div>
