Make it clear that aisle editor html is in partials now

--- a/src/html/codeshelf.dev.html
+++ b/src/html/codeshelf.dev.html
@@ -53,6 +53,7 @@
 
 		</script>
 
+        <!--JR  Moved this into partials/aisle-editor.html  Delete this section altogether
 		<script type="text/ng-template" id="createAisleModalContent.html">
 				<div class="modal-header">
 					<h3>Create Aisle</h3>
@@ -82,5 +83,6 @@
 					<button class="btn btn-warning" ng-click="cancel()">Cancel</button>
 				</div>
 		</script>
+        -->
 	</body>
 </html>
