--- a/src/html/codeshelf.html
+++ b/src/html/codeshelf.html
@@ -52,7 +52,7 @@
 
 		</script>
 
-        <!--JR  Moved this into partials/aisle-editor.html  Delete this section altogether-->
+        <!--JR  Moved this into partials/aisle-editor.html  Delete this section altogether
 		<script type="text/ng-template" id="XX_createAisleModalContent.html">
 				<div class="modal-header">
 					<h3>Create Aisle</h3>
@@ -81,5 +81,6 @@
 					<button class="btn btn-primary" ng-click="ok()">OK</button>
 					<button class="btn btn-warning" ng-click="cancel()">Cancel</button>
 				</div>
+        </script> -->
 	</body>
 </html>
