--- a/src/html/navbar.test2.html
+++ b/src/html/navbar.test2.html
@@ -6,11 +6,16 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
     <script type="text/javascript" src="//code.jquery.com/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+	<style>
+		#navbar-container {
+		  margin-left: 0px;
+		}
+	</style>
 </head>
 <body>
 
 <nav class="navbar navbar-inverse navbar-fixed-top role=navigation">
-    <div class="container">
+    <div id="navbar-container" class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
