Add icon to navbar

--- a/src/html/navbar.test2.html
+++ b/src/html/navbar.test2.html
@@ -10,7 +10,7 @@
 		#navbar-container {
 		  margin-left: 0px;
 		}
-	</style>
+ 	</style>
 </head>
 <body>
 
@@ -24,10 +24,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
+            <!-- is it possible to turn off the hover/highlight for the text brand? -->
             <a class="navbar-brand" href="#">Codeshelf</a>
+            <a class="navbar-brand" href="#"><img src="favicon.gif" width="24" height="24"></a>
         </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
+       <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
 
