--- a/src/html/codeshelf.dev.html
+++ b/src/html/codeshelf.dev.html
@@ -3,7 +3,8 @@
 	<head>
 		<title>Codeshelf</title>
 		<meta charset="utf-8">
-        <link rel="stylesheet" href="../css/bootstrap-combined.min.css">
+        <link rel="stylesheet" href="../../lib/TwitterBootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="../../lib/TwitterBootstrap/css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="../css/roundedpanel.css">
 		<link rel="stylesheet" href="../css/menu.css">
 		<link rel="stylesheet" href="../css/menuitem.css">
@@ -23,7 +24,7 @@
 		<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 		<script type="text/javascript" src="../../lib/GoogleClosureLibrary/closure/goog/base.js"></script>
 
-        <script src="../../lib/AngularJS/angular.js" ></script>
+        <script src="../../lib/AngularJS/angular.min.js" ></script>
         <script src="../../lib/AngularJS/i18n/angular-locale_en-us.js"></script>
         <script src="../../lib/AngularJS/angular-route.js"></script>
         <script src="../../lib/UIBootstrap/ui-bootstrap-tpls-0.10.0.js"></script>
