--- a/src/html/navbar.test.html
+++ b/src/html/navbar.test.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/2.3.2/css/bootstrap.min.css">
+        <link rel="stylesheet" href="../lib/TwitterBootstrap/css/bootstrap.min.css">
 		<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 		<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-		<script src="//netdna.bootstrapcdn.com/bootstrap/2.3.2/js/bootstrap.min.js"></script>
+		<script src="../lib/TwitterBootstrap/js/bootstrap.min.js"></script>
 	</head>
 	<body>
 
